css/freeboard.css
/* ... */
.value-editor-ds {
	color: #B88F51;
	cursor: pointer;
}

ul.board-toolbar {
	padding: 0px;
	margin: 0px;
	text-transform: uppercase;
	font-size: 11px;
}

ul.board-toolbar.vertical {
	display: inline-block;
}

.board-toolbar li {
	color: #B88F51;
	float: left;
	cursor: pointer;
	margin: 0px 0px 0px 5px;
	background-color: rgba(75, 75, 75, 0.0);
	padding: 8px;
	height: 14px;
}

.board-toolbar.vertical li {
	float: none;
}

.board-toolbar li:hover {
	background-color: rgba(75, 75, 75, 1.0);

	-webkit-transition: 250ms linear;
	-moz-transition: 250ms linear;
	-o-transition: 250ms linear;
	-ms-transition: 250ms linear;
	transition: 250ms linear;
}

.board-toolbar li i {
	float: left;
	margin: 0;
	padding: 0;
}

.board-toolbar li label {
	cursor: pointer;
	margin-left: 5px;
	float: left;
	margin-top: -3px;
	margin-bottom: -10px;
}

.text-button {
	color: #B88F51;
	cursor: pointer;
	text-transform: uppercase;
}

.datasource-name {
	text-transform: none;
}

a:hover.text-button, a:focus.text-button {
	color: #B88F51;
	text-decoration: none;
}

.text-button > i {
	margin-right: 10px;
}

.text-button::before,
.text-button::after {
	display: inline-block;
	opacity: 0;
	-webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
	-moz-transition: -moz-transform 0.3s, opacity 0.2s;
	transition: transform 0.3s, opacity 0.2s;
}

.text-button::before {
	margin-right: 5px;
	content: '[';
	-webkit-transform: translateX(10px);
	-moz-transform: translateX(10px);
	transform: translateX(10px);
}

.text-button::after {
	margin-left: 5px;
	content: ']';
	-webkit-transform: translateX(-10px);
	-moz-transform: translateX(-10px);
	transform: translateX(-10px);
}

.text-button:hover::before,
.text-button:hover::after,
.text-button:focus::before,
.text-button:focus::after {
	opacity: 1;
	-webkit-transform: translateX(0px);
	-moz-transform: translateX(0px);
	transform: translateX(0px);
}

.setting-description {
	font-size: 10px;
	text-shadow: none;
	color: #6F6F6F;
	margin-top: 5px;
	margin-bottom: 15px;
	max-width: 414px;
	line-height: 1.5em;
}

.calculated-setting-row {
	clear: both;
	height: 30px;
	margin-bottom: 5px;
}

textarea.calculated-value-input {
	position: absolute;
	width: 400px;
	height: 20px;
	resize: none;
	white-space: nowrap;
	overflow: auto;
	Z-index: 3000;
}

ul.datasource-input-suffix {
	margin-left: 409px;
}

.form-label .board-toolbar li {
	float: right;
}

.styled-select select {
	width: 414px;
	height: 30px;
	-webkit-appearance: none;
	border: 1px solid #3d3d3d;
	background: url(../img/dropdown-arrow.png) no-repeat right #272727;
}

.title {
	font-family: 'Helvetica-Neue', 'Helvetica', 'Arial', sans-serif;
	vertical-align: baseline;
	-webkit-font-smoothing: antialiased;
	font-style: normal;
	color: #d3d4d4;
}

.title.bordered {
	border: solid 3px #d3d4d4;
	display: inline-block;
	padding: 2px 17px 2px 17px;
	line-height: 39px;
}

h1.title {
	margin-bottom: 10px;
	font-size: 23px;
	letter-spacing: -1px;
}

h2.title {
	font-size: 13px;
	line-height: 20px;
	margin: 0px;
	padding-top: 10px;
	padding-bottom: 10px;
}

.form-value input[type="checkbox"] {
	margin-top: 8px;
}

.table-operation {
	font-size: 11px;
	padding-left: 5px;
	padding-bottom: 5px;
	padding-top: 1px;
}

#add-pane {
}

#pane-holding-pen {
	display: none;
}

@media screen and (max-width : 960px) {
	#add-pane {
		padding-top: 10px;
	}

	.text-button {
		font-size: 14px;
		line-height: 22px;
	}

	h1.title {
		margin-bottom: 0px;
		font-size: 13px;
		letter-spacing: 0px;
	}

	.title.bordered {
		padding: 1px 8px;
		line-height: 25px;
		border-width: 2px;
	}

	#admin-menu {
-		width: 100%;
+		width: 50%;
	}

	h2.title {
		font-size: 10px;
		padding-top: 5px;
		padding-bottom: 5px;
	}

	#board-tools {
		width: 100%;
	}

	#datasources {
-		width: 100%;
-		float: none;
+		width: 50%;
		clear: both;
	}

	#board-actions {
		float: left;
	}

	#board-logo {
		float: left;
	}

	.modal header {
		height: 30px;
	}

	.modal {
		width: 100%;
		top: 0px;
		left: 0px;
	}

	.datasource-list-container {
		max-height: 77px;
	}

	.form-label {
		float: none;
		height: auto;
		width: auto;
		text-align: left;
		padding-top: 0px;
	}

	.form-value {
		width: 100%;
		padding-bottom: 10px;
		float: none;
	}

	.control-label {
		width: auto;
	}

	.modal section {
		padding-bottom: 10px;
		padding-top: 10px;
	}

	ul.datasource-input-suffix {
		margin-left: 0px;
		margin-bottom: 30px;
	}

	ul.datasource-input-suffix li {
		margin-left: 0;
	}

	textarea, input[type="text"] {
		width: 95%;
	}

	.styled-select select {
		width: 100%;
	}

	.form-table-value-subtable {
		width: 100%;
	}

	.table-operation {
		font-size: 11px;
	}

	textarea.calculated-value-input {
		position: inherit;
		width: 95%;
	}
}

.wrapperloading {
	position: absolute;
	height: 200px;
	width: 200px;
	top: 50%;
	margin-top: -100px;
	left: 50%;
	margin-left: -100px;
	z-index: 2000;
}

.wrapperloading .loading.up {
	position: absolute;
	height: 200px;
	width: 200px;
	border-radius: 150px;
	border: 3px solid #fff;
	border-top-color: #fff;
	border-left-color: #555;
	border-right-color: #555;
	border-bottom-color: #fff;
	-webkit-animation: rotation 3s linear infinite;
	-moz-animation: rotation 3s linear infinite;
	-o-animation: rotation 3s linear infinite;
	animation: rotation 3s linear infinite;
}

.wrapperloading .loading.down {
	position: absolute;
	height: 100px;
	width: 100px;
	top: 50%;
	margin-top: -50px;
	left: 50%;
	margin-left: -50px;
	border-radius: 150px;
	border: 3px solid #fff;
	border-left-color: #fff;
	border-top-color: #555;
	border-bottom-color: #555;
	border-right-color: #fff;
	-webkit-animation: rotation 1s linear infinite;
	-moz-animation: rotation 1s linear infinite;
	-o-animation: rotation 1s linear infinite;
	animation: rotation 1s linear infinite;
}
/* ... */

